--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.22"
+    "mathjs": "^5.4.2",
+    "three": "^0.101.1",
+    "tone": "^13.4.9",
+    "vue": "^2.5.22",
+    "vuex": "^3.1.0",
+    "webgl-utils": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
